--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Take jobs from the job log, and put them in elasticsearch",
   "main": "index.js",
   "scripts": {
-    "test": "mocha"
+    "test": "istanbul cover _mocha -- -R spec --require coffee-coverage/register-istanbul"
   },
   "repository": {
     "type": "git",
@@ -26,5 +26,15 @@
     "coffee-script": "^1.10.0",
     "elasticsearch": "^10.0.1",
     "redis": "^2.4.2"
+  },
+  "devDependencies": {
+    "chai": "^3.4.1",
+    "coffee-coverage": "^0.7.0",
+    "coffee-script": "^1.10.0",
+    "istanbul": "^0.4.1",
+    "mocha": "^2.3.4",
+    "mocha-istanbul": "^0.2.0",
+    "sinon": "^1.17.2",
+    "sinon-chai": "^2.8.0"
   }
 }
