--- a/package.json
+++ b/package.json
@@ -23,7 +23,9 @@
   "homepage": "https://github.com/octoblu/job-log-to-elasticsearch#readme",
   "dependencies": {
     "@octoblu/redis-ns": "^0.1.2",
+    "async": "^1.5.0",
     "coffee-script": "^1.10.0",
+    "commander": "^2.9.0",
     "elasticsearch": "^10.0.1",
     "redis": "^2.4.2"
   },
@@ -31,10 +33,12 @@
     "chai": "^3.4.1",
     "coffee-coverage": "^0.7.0",
     "coffee-script": "^1.10.0",
+    "fakeredis": "^1.0.2",
     "istanbul": "^0.4.1",
     "mocha": "^2.3.4",
     "mocha-istanbul": "^0.2.0",
     "sinon": "^1.17.2",
-    "sinon-chai": "^2.8.0"
+    "sinon-chai": "^2.8.0",
+    "uuid": "^2.0.1"
   }
 }
