--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "job-log-to-elasticsearch",
-  "version": "1.0.2",
+  "version": "1.0.3",
   "description": "Take jobs from the job log, and put them in elasticsearch",
   "main": "index.js",
   "scripts": {
@@ -26,7 +26,9 @@
     "async": "^1.5.0",
     "coffee-script": "^1.10.0",
     "commander": "^2.9.0",
+    "debug": "^2.2.0",
     "elasticsearch": "^10.0.1",
+    "lodash": "^4.0.0",
     "redis": "^2.4.2"
   },
   "devDependencies": {
