--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "job-log-to-elasticsearch",
-  "version": "2.1.1",
+  "version": "2.2.0",
   "description": "Take jobs from the job log, and put them in elasticsearch",
   "main": "index.js",
   "scripts": {
@@ -28,6 +28,7 @@
     "commander": "^2.9.0",
     "debug": "^2.2.0",
     "elasticsearch": "^11.0.1",
+    "ioredis": "^2.0.0-rc4",
     "lodash": "^4.0.0",
     "redis": "^2.4.2"
   },
@@ -42,5 +43,8 @@
     "sinon": "^1.17.2",
     "sinon-chai": "^2.8.0",
     "uuid": "^2.0.1"
+  },
+  "optionalDependencies": {
+    "hiredis": "^0.4.1"
   }
 }
