--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "job-log-to-elasticsearch",
-  "version": "2.2.0",
+  "version": "2.3.0",
   "description": "Take jobs from the job log, and put them in elasticsearch",
   "main": "index.js",
   "scripts": {
@@ -22,13 +22,12 @@
   },
   "homepage": "https://github.com/octoblu/job-log-to-elasticsearch#readme",
   "dependencies": {
-    "@octoblu/redis-ns": "^0.1.2",
     "async": "^1.5.0",
     "coffee-script": "^1.10.0",
     "commander": "^2.9.0",
     "debug": "^2.2.0",
     "elasticsearch": "^11.0.1",
-    "ioredis": "^2.0.0-rc4",
+    "ioredis": "^2.0.0",
     "lodash": "^4.0.0",
     "redis": "^2.4.2"
   },
