--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "job-log-to-elasticsearch",
-  "version": "2.3.4",
+  "version": "3.0.0",
   "description": "Take jobs from the job log, and put them in elasticsearch",
   "main": "index.js",
   "scripts": {
@@ -29,7 +29,7 @@
     "coffee-script": "^1.10.0",
     "commander": "^2.9.0",
     "debug": "^2.2.0",
-    "elasticsearch": "^11.0.1",
+    "elasticsearch": "^13.0.0-beta2",
     "ioredis": "^2.0.0",
     "lodash": "^4.0.0"
   },
@@ -41,12 +41,12 @@
     "istanbul": "^0.4.1",
     "mocha": "^2.3.4",
     "mocha-istanbul": "^0.2.0",
+    "mocha-multi": "^0.9.1",
+    "mocha-osx-reporter": "^0.1.2",
+    "nyc": "^8.3.0",
     "sinon": "^1.17.2",
     "sinon-chai": "^2.8.0",
-    "uuid": "^2.0.1",
-    "nyc": "^8.3.0",
-    "mocha-osx-reporter": "^0.1.2",
-    "mocha-multi": "^0.9.1"
+    "uuid": "^2.0.1"
   },
   "optionalDependencies": {
     "hiredis": "^0.4.1"
