--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "job-log-to-elasticsearch",
-  "version": "3.0.1",
+  "version": "3.0.2",
   "description": "Take jobs from the job log, and put them in elasticsearch",
   "main": "index.js",
   "scripts": {
@@ -31,25 +31,26 @@
     "debug": "^2.2.0",
     "elasticsearch": "^13.0.0-beta2",
     "ioredis": "^2.0.0",
-    "lodash": "^4.0.0"
+    "lodash": "^4.0.0",
+    "sigterm-handler": "^2.0.0"
   },
   "devDependencies": {
     "chai": "^3.4.1",
-    "coffee-coverage": "^0.7.0",
+    "coffee-coverage": "^2.0.1",
     "coffee-script": "^1.10.0",
-    "fakeredis": "^1.0.2",
+    "fakeredis": "^2.0.0",
     "istanbul": "^0.4.1",
-    "mocha": "^2.3.4",
-    "mocha-istanbul": "^0.2.0",
-    "mocha-multi": "^0.9.1",
+    "mocha": "^3.2.0",
+    "mocha-istanbul": "^0.3.0",
+    "mocha-multi": "^0.10.0",
     "mocha-osx-reporter": "^0.1.2",
-    "nyc": "^8.3.0",
+    "nyc": "^10.1.2",
     "sinon": "^1.17.2",
     "sinon-chai": "^2.8.0",
-    "uuid": "^2.0.1"
+    "uuid": "^3.0.1"
   },
   "optionalDependencies": {
-    "hiredis": "^0.4.1"
+    "hiredis": "^0.5.0"
   },
   "nyc": {
     "cache": true,
